--- a/open-teleprompt/open-teleprompt.csproj
+++ b/open-teleprompt/open-teleprompt.csproj
@@ -55,6 +55,10 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Teleprompter.resx">
+      <DependentUpon>Teleprompter.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
@@ -68,6 +72,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Teleprompter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Teleprompter.Designer.cs">
+      <DependentUpon>Teleprompter.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="img\NewDocument.png" />
+    <Content Include="img\Open.png" />
+    <Content Include="img\Save.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
