--- a/open-teleprompt/open-teleprompt.csproj
+++ b/open-teleprompt/open-teleprompt.csproj
@@ -79,6 +79,10 @@
       <DependentUpon>Teleprompter.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="TeleSettingsForm.resx">
+      <DependentUpon>TeleSettingsForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
@@ -97,6 +101,13 @@
     </Compile>
     <Compile Include="Teleprompter.Designer.cs">
       <DependentUpon>Teleprompter.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeleSettings.cs" />
+    <Compile Include="TeleSettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TeleSettingsForm.Designer.cs">
+      <DependentUpon>TeleSettingsForm.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
