--- a/open-teleprompt/open-teleprompt.csproj
+++ b/open-teleprompt/open-teleprompt.csproj
@@ -96,6 +96,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="reporter_bgcolor.cs" />
     <Compile Include="Teleprompter.cs">
       <SubType>Form</SubType>
     </Compile>
