add load/save settings support, some cross platform fixes, show custom color

--- a/open-teleprompt/open-teleprompt.csproj
+++ b/open-teleprompt/open-teleprompt.csproj
@@ -120,6 +120,7 @@
     <Compile Include="TeleSettingsForm.Designer.cs">
       <DependentUpon>TeleSettingsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="XmlHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="img\NewDocument.png" />
